# blogrs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.sqlx/: query-06fae9062627b028221ca6e434b256803690b9329777290d83c199ddfbec249e.json  query-547c6570813c6b406ff6ec4127925c297fa48e08a0e79242a0bd7d459d2cd9d2.json  query-5c8f0e803c5c77df05a90a5190cc6e35717d9fc35948c1de7ca36951be525283.json  query-636808497bb28c98df32b4062ef620b1ee619bd7105e0e77ad739a61bf3f3c8f.json  query-b8272adc7eb142af7d7860e18a2b2f39067e6a4edb5bf52f1a2cb0e3bc7d6af8.json  query-cfc6051861c183a209ba8122acc65102ee70b86eb11e58aa7028e08d05459b2d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 0001_create_author.sql  0001_create_post.sql  0001_create_users.sql  0002_create_category.sql  0003_create_post.sql
src/: controller.rs  guard.rs  handler.rs  main.rs  model.rs  route.rs  schema.rs
src/handlers/: auth.rs  post.rs
src/models/: category.rs  post.rs  user.rs
